--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,16 @@
     "jsx": "react-jsx",
     "allowJs": true,
 
+    // Build setup
+    "rootDirs": ["./src"],
+    "outDir": "./build",
+
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
+  
 
     // Best practices
     "strict": true,
